--- a/Resources/views/Rule/edit.html.twig
+++ b/Resources/views/Rule/edit.html.twig
@@ -1,9 +1,12 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
+{% import 'DiamanteAutomationBundle:Rule/macros:general.html.twig' as _general %}
+{% import 'DiamanteAutomationBundle:Rule/macros:conditions.html.twig' as _conditions %}
+{% import 'DiamanteAutomationBundle:Rule/macros:actions.html.twig' as _actions %}
 
-{% set formAction =  path('diamante_automation_create') %}
+{% set formAction = form.vars.value.id ? path('diamante_automation_update', { 'id': form.vars.value.id }) : path('diamante_automation_create') %}
 
 {% block navButtons %}
-        {% set cancel_url = path('diamante_automation_list') %}
+    {% set cancel_url = path('diamante_automation_list') %}
     {{ UI.button({'path' : cancel_url, 'title' : 'diamante.automation.ui.cancel'|trans, 'label' : 'diamante.automation.ui.cancel'|trans}) }}
     {% set html = UI.saveAndCloseButton() %}
     {{ UI.dropdownSaveButton({'html': html}) }}
@@ -14,13 +17,12 @@
     {% if form.vars.value.id %}
         {% set breadcrumbs = {
         'entity':      form.vars.value,
-        'indexPath':   path('diamante_automation_rules_list'),
+        'indexPath':   path('diamante_automation_list'),
         'indexLabel':  'diamante.automation.rule.entity_plural_label'|trans,
         'entityTitle': form.vars.value.name|default('N/A'),
         'hasAvatar':   true,
-        'imagePath':   form.vars.value.logo ? form.vars.value.logo.pathname : null
-        }
-        %}
+        'imagePath':   null
+        } %}
         {{ parent() }}
     {% else %}
         {% set title = 'oro.ui.create_entity'|trans({'%entityName%': 'diamante.automation.rule.entity_plural_label'|trans}) %}
@@ -28,8 +30,56 @@
     {% endif %}
 {% endblock pageHeader %}
 
-
 {% block content_data %}
+    {% set id = 'ruleEdit' %}
+
+    <script type="text/javascript">
+        require(['jquery', 'diamanteautomation/js/condition.view', 'diamanteautomation/js/action.view'],
+                function ($, ConditionView, ActionView) {
+                    $(function () {
+                        new ConditionView({fieldId: '#{{ form.conditions.vars.id }}'});
+                        new ActionView({fieldId: '#{{ form.actions.vars.id }}'});
+                    });
+                });
+    </script>
+
+    {% set dataBlocks = [{
+    'title': 'General',
+    'class': 'active',
+    'subblocks': [
+    {
+    'title': null,
+    'data': [
+    _general.render(form)
+    ]
+    }
+    ]
+    }] %}
+
+    {% set dataBlocks = dataBlocks|merge([{
+    'title': 'Conditions',
+    'subblocks': [
+    {
+    'title': null,
+    'data': [_conditions.render(form)]
+    }]
+    }]
+    ) %}
+
+    {% set dataBlocks = dataBlocks|merge([{
+    'title': 'Actions'|trans,
+    'subblocks': [
+    {
+    'title': null,
+    'data': [_actions.render(form)]
+    }]
+    }]
+    ) %}
+
+    {% set data = {
+    'formErrors': form_errors(form)? form_errors(form) : null,
+    'dataBlocks': dataBlocks,
+    } %}
 
     {{ parent() }}
 {% endblock content_data %}
