DIAM-900 add actions variables to update templates

--- a/Resources/views/Business/update.html.twig
+++ b/Resources/views/Business/update.html.twig
@@ -1,5 +1,9 @@
 {% extends 'DiamanteAutomationBundle:Rule:edit.html.twig' %}
 
+{% set listAction = 'diamante_business_list' %}
+{% set createAction = 'diamante_business_create' %}
+{% set updateAction = 'diamante_business_update' %}
+
 {% block content_data %}
     {% set id = 'ruleEdit' %}
 
