--- a/Resources/views/Workflow/update.html.twig
+++ b/Resources/views/Workflow/update.html.twig
@@ -1,5 +1,9 @@
 {% extends 'DiamanteAutomationBundle:Rule:edit.html.twig' %}
 
+{% set listAction = 'diamante_workflow_list' %}
+{% set createAction = 'diamante_workflow_create' %}
+{% set updateAction = 'diamante_workflow_update' %}
+
 {% block content_data %}
     {% set id = 'ruleEdit' %}
 
