--- a/Resources/views/Rule/view.html.twig
+++ b/Resources/views/Rule/view.html.twig
@@ -2,55 +2,6 @@
 {% import 'DiamanteAutomationBundle:Rule/macros:conditions.html.twig' as _conditions %}
 {% import 'DiamanteAutomationBundle:Rule/macros:actions.html.twig' as _actions %}
 
-{% oro_title_set({params : {"%rule.name%": entity.name|default('diamante.automation.common.not_available'|trans) }}) %}
-
-{% block navButtons %}
-    {% if resource_granted('CREATE', 'Entity:DiamanteAutomationBundle:WorkflowRule') %}
-        {{ UI.button({
-            'path': path('diamante_workflow_create', {'id': entity.id}),
-            'iCss': 'icon-plus',
-            'title': 'diamante.automation.rule.actions.add'|trans,
-            'label': 'diamante.automation.rule.actions.add'|trans
-        }) }}
-    {% endif %}
-    {% if resource_granted('EDIT', entity) %}
-        {{ UI.button({
-            'path': path('diamante_workflow_update', {'id': entity.id}),
-            'iCss': 'icon-edit',
-            'title': 'diamante.automation.rule.actions.edit'|trans,
-            'label': 'diamante.automation.ui.edit'|trans
-        }) }}
-    {% endif %}
-
-    {% if resource_granted('DELETE', entity) %}
-        {{ UI.deleteButton({
-            'dataUrl': path('diamante_workflow_delete', {'id': entity.id}),
-            'dataRedirect': path('diamante_workflow_list'),
-            'aCss': 'no-hash remove-button',
-            'dataId': entity.id,
-            'id': 'btn-remove-account',
-            'dataMessage': 'diamante.automation.rule.messages.delete.query'|trans,
-            'successMessage': 'diamante.automation.rule.messages.delete.success'|trans,
-            'title': 'diamante.automation.rule.actions.remove'|trans,
-            'label': 'diamante.automation.ui.delete'|trans
-            })
-        }}
-    {% endif %}
-{% endblock navButtons %}
-
-{% block pageHeader %}
-    {% set breadcrumbs = {
-            'entity': entity,
-            'indexPath': path('diamante_workflow_list'),
-            'indexLabel': 'diamante.automation.rule.entity_plural_label'|trans,
-            'entityTitle': entity.name|default('diamante.automation.common.not_available'|trans),
-            'hasAvatar': true,
-            'imagePath': null
-        }
-    %}
-    {{ parent() }}
-{% endblock pageHeader %}
-
 {% block content_data %}
     {% set id = 'viewRule' %}
 
@@ -60,7 +11,7 @@
                     $(function () {
                         var conditions = '';
                         new ConditionView({"conditions": '{{ conditions|raw }}'});
-                        new ActionView({fieldId: '#qwerty'});
+                        new ActionView({"actions": '{{ actions|raw }}'});
                     });
                 });
     </script>
