--- a/Resources/views/Workflow/view.html.twig
+++ b/Resources/views/Workflow/view.html.twig
@@ -1,6 +1,4 @@
-{% extends 'OroUIBundle:actions:view.html.twig' %}
-{% import 'DiamanteAutomationBundle:Rule/macros:conditions.html.twig' as _conditions %}
-{% import 'DiamanteAutomationBundle:Rule/macros:actions.html.twig' as _actions %}
+{% extends 'DiamanteAutomationBundle:Rule:view.html.twig' %}
 
 {% oro_title_set({params : {"%rule.name%": entity.name|default('diamante.automation.common.not_available'|trans) }}) %}
 
@@ -52,52 +50,5 @@
 {% endblock pageHeader %}
 
 {% block content_data %}
-    {% set id = 'viewRule' %}
-
-    <script type="text/javascript">
-        require(['jquery', 'diamanteautomation/js/condition.view', 'diamanteautomation/js/action.view'],
-                function ($, ConditionView, ActionView) {
-                    $(function () {
-                        var conditions = '';
-                        new ConditionView({"conditions": '{{ conditions|raw }}'});
-                        new ActionView({fieldId: '#qwerty'});
-                    });
-                });
-    </script>
-
-    {% set dataSubBlocks = [UI.attibuteRow('diamante.automation.forms.name'|trans, entity.name)] %}
-
-    {% set dataBlocks =
-        [{
-            'title': 'diamante.automation.common.general'|trans,
-            'class': 'active',
-            'subblocks': [{
-                'title': 'diamante.automation.rule.details'|trans,
-                'data' : dataSubBlocks
-            }]
-        }]
-    %}
-
-    {% set dataBlocks = dataBlocks|merge([{
-    'title': 'Conditions',
-    'subblocks': [
-    {
-    'title': null,
-    'data': [_conditions.renderView(), _conditions.renderTemplates('view')]
-    }]
-    }]
-    ) %}
-
-    {% set dataBlocks = dataBlocks|merge([{
-    'title': 'Actions'|trans,
-    'subblocks': [
-    {
-    'title': null,
-    'data': [_actions.renderView(), _actions.renderTemplates('view')]
-    }]
-    }]
-    ) %}
-
-    {% set data = {'dataBlocks': dataBlocks} %}
     {{ parent() }}
 {% endblock content_data %}
