DIAM-1255: Fixed title errors in installer

--- a/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
+++ b/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ block('title') }}</title>
+    <title>{% block title %}DiamanteDesk Installation {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="manifest" href="{{ asset('bundles/diamantedistribution/img/ico/manifest.json') }}">
