--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/empty-list.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/empty-list.ejs
@@ -1,1 +1,1 @@
-<td colspan="5">Your task’s list is empty.<br>Create task by pressing <a href="#tickets/create">+</a> button</td>
+<td colspan="5">Your task’s list is empty.<br>Create task by pressing <a href="#tickets/create">+</a> button.</td>
