--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/registration.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/registration.ejs
@@ -18,6 +18,6 @@
         <label class="control-label" for="password">Password</label>
         <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Enter Password">
     </div>
-    <p>Already have account? &mdash; <a href="#login">Sign in</a></p>
+    <p>Already have an account? &mdash; <a href="#login">Sign in</a></p>
     <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Continue</button>
 </form>
