--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Session/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Session/main.less
@@ -1,7 +1,10 @@
 .auth-page {
   .logo {
     text-align: center;
-    margin:0 0 75px;
+    margin:0 0 25px;
+    background: url(../img/logo_auth.png) 0 0 no-repeat;
+    background-size: cover;
+    img { opacity: 0 }
   }
   
   #main {
