--- a/Resources/views/Rule/macros/actions.html.twig
+++ b/Resources/views/Rule/macros/actions.html.twig
@@ -19,42 +19,82 @@
 {% endmacro %}
 
 {% macro renderTemplates(mode) %}
-    <script type="text/template" id="item-action-view">
-        <span class="editable"><%= actions[attrs.action].name %></span> notification by
-        <span class="editable"><%= properties[attrs.property].name %></span> to
-        <span class="editable"><%= values[attrs.value].name %></span>
+    <script type="text/template" id="action-general-view">
+        <span class="editable"><%= types[attrs.type].name %></span> notification by
+        <span class="editable"><%= notifications[attrs.notification].name %></span> to
+        <span class="editable"><%= addressees[attrs.addressee].name %></span>
     </script>
 
-    <script type="text/template" id="item-action-edit">
+    <script type="text/template" id="action-general-edit">
         <div class="selector" style="width: 72px;">
-            <span><%= actions[attrs.action].name %></span>
-            <select data-property="action">
-                <% _.each(actions, function(item, key) { %>
+            <span><%= types[attrs.type].name %></span>
+            <select data-property="type">
+                <% _.each(types, function(item, key) { %>
                 <option
-                <% if (attrs.action == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
+                <% if (attrs.type == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
                 <%}) %>
             </select>
         </div>
         notification by
         <div class="selector" style="width: 72px;">
-            <span><%= properties[attrs.property].name %></span>
-            <select data-property="property">
-                <% _.each(properties, function(item, key) { %>
+            <span><%= notifications[attrs.notification].name %></span>
+            <select data-property="notification">
+                <% _.each(notifications, function(item, key) { %>
                 <option
-                <% if (attrs.property == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
+                <% if (attrs.notification == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
                 <%}) %>
             </select>
         </div>
         to
         <div class="selector" style="width: 72px;">
-            <span><%= values[attrs.value].name %></span>
-            <select  data-property="value">
-                <% _.each(values, function(item, key) { %>
+            <span><%= addressees[attrs.addressee].name %></span>
+            <select  data-property="addressee">
+                <% _.each(addressees, function(item, key) { %>
                 <option
-                <% if (attrs.value == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
+                <% if (attrs.addressee == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
                 <%}) %>
             </select>
         </div>
+    </script>
+
+    <script type="text/template" id="action-update-view">
+        <span class="editable"><%= types[attrs.type].name %></span>
+        <span class="editable"><%= targets[attrs.target].name %></span> property
+        <span class="editable"><%= targets[attrs.target].properties[attrs.property] %></span> to
+        <span class="editable"><%= attrs.value %></span>
+    </script>
+
+    <script type="text/template" id="action-update-edit">
+        <div class="selector" style="width: 72px;">
+            <span><%= types[attrs.type].name %></span>
+            <select data-property="type">
+                <% _.each(types, function(item, key) { %>
+                <option
+                <% if (attrs.type == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
+                <%}) %>
+            </select>
+        </div>
+        <div class="selector" style="width: 72px;">
+            <span><%= targets[attrs.target].name %></span>
+            <select data-property="target">
+                <% _.each(targets, function(item, key) { %>
+                <option
+                <% if (attrs.target == key) { %> selected <% } %> value="<%= key %>"><%= item.name %></option>
+                <%}) %>
+            </select>
+        </div>
+        property
+        <div class="selector" style="width: 72px;">
+            <span><%= targets[attrs.target].properties[attrs.property] %></span>
+            <select data-property="property">
+                <% _.each(properties, function(item, key) { %>
+                <option
+                <% if (attrs.property == key) { %> selected <% } %> value="<%= key %>"><%= item %></option>
+                <%}) %>
+            </select>
+        </div>
+        to
+        <input data-property="value" type="text" value="<%= attrs.value %>">
     </script>
 
     <script type="text/template" id="item-action">
