--- a/src/Diamante/FrontBundle/Resources/assets/less/layout/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/layout/main.less
@@ -7,6 +7,7 @@
   padding: (@header-height + @main-gutter) @main-gutter (@main-gutter + @footer-height);
   background: #fff;
   min-height: 100%;
+  color: purple;
 }
 
 .modal-header {
