--- a/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
@@ -15,6 +15,26 @@
   fill: brown;
 }
 
+.empty-widget {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+     -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 250%;
+  line-height: 1.25;
+
+}
+
+.widget-content {
+  position: relative;
+}
 
 
 .diam-plot .axis {
