--- a/src/Diamante/DeskBundle/Resources/views/Ticket/list.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/list.html.twig
@@ -1,6 +1,10 @@
 {% extends 'OroUIBundle:actions:index.html.twig' %}
 {% import 'OroUIBundle::macros.html.twig' as UI %}
-{% set pageTitle = 'diamante.desk.ticket.all'|trans %}
+
+{% set gridName = 'diamante-ticket-grid' %}
+
+{% set pageTitle = 'diamante.desk.ticket.entity_plural_label'|trans %}
+
 {% block navButtons %}
     {% if resource_granted('CREATE', 'Entity:DiamanteDeskBundle:Ticket') %}
         {{ UI.addButton({
@@ -10,29 +14,3 @@
         }) }}
     {% endif %}
 {% endblock %}
-
-{% block content_datagrid %}
-
-    {% set gridName = 'diamante-ticket-grid' %}
-
-    <div class="placeholder">
-        <div class="scrollable-container">
-            <div class="content" style="background-color: #fff;">
-                {{ dataGrid.renderGrid(gridName, {}, {cssClass:'diam-tickets'}) }}
-            </div>
-        </div>
-    </div>
-
-    <script>
-        require(['jquery',  'oroui/js/mediator'],
-            function($, mediator) {
-                mediator.on('grid_render:complete', function (element) {
-                    $(element).find("tbody tr").each(function(){
-                        //Here we expect to have key column as first column with string type data
-                        $(this).find("td.string-cell").first().addClass("key-cell");
-                    });
-                });
-            });
-    </script>
-
-{% endblock content_datagrid %}
