--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Session/templates/login.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Session/templates/login.ejs
@@ -17,5 +17,5 @@
         </label>
     </div>
     <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Sign In</button>
-    <p>Don't have account? &mdash; <a href="#registration">Registration</a></p>
+    <p>Don't have an account? &mdash; <a href="#registration">Registration</a></p>
 </form>
