--- a/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
@@ -15,12 +15,11 @@
   fill: brown;
 }
 
-.empty-widget {
+.empty-widget, .empty-report {
   width: 75%;
   margin: auto;
   text-align: center;
   position: absolute;
-  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
      -moz-transform: translate(-50%, -50%);
@@ -32,10 +31,17 @@
 
 }
 
-.widget-content {
-  position: relative;
+.empty-widget {
+  top: 50%;
 }
 
+.empty-report {
+  top: 38%;
+}
+
+.container-fluid, .widget-content {
+  position: relative;
+}
 
 .diam-plot .axis {
   font: 10px sans-serif;
